[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
divan = "0.1.17"
nom = "7.1.3"
rayon = "1.10.0"
regex = "1.11.1"

[[bin]]
name = "day1"

[[bin]]
name = "day2"

[[bin]]
name = "day3"

[[bin]]
name = "day3_nom"

[[bin]]
name = "day4"

[[bench]]
name = "day-04-bench"
path = "src/bin/day4.rs"
harness = false

[[bin]]
name = "day5"

[[bench]]
name = "day-05-bench"
path = "src/bin/day5.rs"
harness = false

[[bin]]
name = "day6"

[[bench]]
name = "day-06-bench"
path = "src/bin/day6.rs"
harness = false

[dev-dependencies]
divan = "0.1.16"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
