[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
divan = "0.1.17"
glam = "0.29.2"
itertools = "0.13.0"
miette = "7.4.0"
nom = "7.1.3"
rayon = "1.10.0"
regex = "1.11.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "day1"
bench = false
test = true

[[bench]]
name = "day1_bench"
path = "src/bin/day1/bench.rs"
bench = true
harness = false
test = false

[[bin]]
name = "day2"
bench = false
test = true

[[bench]]
name = "day2_bench"
path = "src/bin/day2.rs"
bench = true
harness = false
test = false

[[bin]]
name = "day3"
bench = false
test = true

[[bench]]
name = "day3_bench"
path = "src/bin/day3.rs"
bench = true
harness = false
test = false

[[bin]]
name = "day3_nom"
bench = false
test = true

[[bench]]
name = "day3_nom_bench"
path = "src/bin/day3_nom.rs"
bench = true
harness = false
test = false

[[bin]]
name = "day4"
bench = false
test = true

[[bench]]
name = "day4_bench"
path = "src/bin/day4.rs"
bench = true
harness = false
test = false

[[bin]]
name = "day5"
bench = false
test = true

[[bench]]
name = "day5_bench"
path = "src/bin/day5.rs"
bench = true
harness = false
test = false

[[bin]]
name = "day6"
bench = false
test = true

[[bench]]
name = "day6_bench"
path = "src/bin/day6.rs"
bench = true
harness = false
test = false

[[bin]]
name = "day7"
bench = false
test = true

[[bench]]
name = "day7_bench"
path = "src/bin/day7.rs"
bench = true
harness = false
test = false

[[bin]]
name = "day8"
bench = false
test = true

[[bench]]
name = "day8_bench"
path = "src/bin/day8.rs"
bench = true
harness = false
test = false

[[bin]]
name = "day9"
bench = false
test = true

[[bench]]
name = "day9_bench"
path = "src/bin/day9/bench.rs"
bench = true
harness = false
test = false

[dev-dependencies]
divan = "0.1.16"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
